; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_prefixes.c_sqlite3_prefixes_init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_prefixes.c_sqlite3_prefixes_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"prefixes\00", align 1
@prefixesModule = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"prefix_length\00", align 1
@SQLITE_UTF8 = common dso_local global i32 0, align 4
@prefixLengthFunc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3_prefixes_init(i32* %0, i8** %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* @SQLITE_OK, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @SQLITE_EXTENSION_INIT2(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @sqlite3_create_module(i32* %11, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32* @prefixesModule, i32 0)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @SQLITE_OK, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %3
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @SQLITE_UTF8, align 4
  %19 = load i32, i32* @prefixLengthFunc, align 4
  %20 = call i32 @sqlite3_create_function(i32* %17, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 2, i32 %18, i32 0, i32 %19, i32 0, i32 0)
  store i32 %20, i32* %7, align 4
  br label %21

21:                                               ; preds = %16, %3
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i32 @SQLITE_EXTENSION_INIT2(i32*) #1

declare dso_local i32 @sqlite3_create_module(i32*, i8*, i32*, i32) #1

declare dso_local i32 @sqlite3_create_function(i32*, i8*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
